FRONTEND - Scanner Update

--- a/Frontend/Pages/scanner.html
+++ b/Frontend/Pages/scanner.html
@@ -9,6 +9,7 @@
     <header>
         <h1>
             Safe-Link Scanner
+            <!-- pang streak lng sa github-->
         </h1>
     </header>
     
