--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safe-Link</title>
-    <link rel="stylesheet" href="style.css">
+    <title>SafeLink</title>
+    <link rel="stylesheet" href="/Frontend/CSS/style.css">
     <!-- d q lam bat d pa gumagana tong css the hells-->
 </head>
     <body>
