--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SafeLink</title>
-    <link rel="stylesheet" href="/Frontend/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <!-- d q lam bat d pa gumagana tong css the hells-->
 </head>
     <body>
@@ -14,12 +14,12 @@
             <nav>
                   <!-- <a href="index.html">Home</a> -->
                    <!-- hirap nmn mag comment dito amp-->
-                    <a href="help.html">Help</a>
+                    <a href="Pages/help.html">Help</a>
             </nav>
         </header>
         <main class ="home">
             <h2>Protect yourself from malicious URLs</h2>
-            <button onclick ="location.href='Pages/scanner.html'">Start Scanning</button>
+            <button onclick="location.href='Pages/scanner.html'">Start Scanning</button>
         </main>
 
     </body>
