--- a/Frontend/safelink.html
+++ b/Frontend/safelink.html
@@ -133,11 +133,11 @@
     <section class="grid">
       <article class="card">
         <h3>REAL TIME SECURITY ANALYSIS</h3>
-        <p>Advanced algorithms scan links for malicious content, phishing attempts, and security threats in real‑time.</p>
+        <p>Advanced algorithms scan links for malicious content and security threats in real‑time.</p>
       </article>
       <article class="card">
-        <h3>DETAILED METADATA</h3>
-        <p>Get comprehensive information about websites.</p>
+        <h3>DETAILED FEATURE</h3>
+        <p>Get comprehensive information about how the url was analyzed.</p>
       </article>
       <article class="card">
         <h3>QR CODE SUPPORT</h3>
