--- a/Frontend/safelink.html
+++ b/Frontend/safelink.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SafeLink — Automated Link Validation & Security Scanner</title>
+  <title>SafeLink</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -124,6 +124,10 @@
       <div class="help-item warning">
         <h4>Safe Browsing Habits:</h4>
         <p>Develop good security habits by typing known URLs directly into the browser address bar instead of clicking links, bookmarking important sites, keeping browsers and security software updated, and always using secure connections.</p>
+      </div>
+      <div class="help-item warning">
+        <h4>QR Code and Mobile Threats:</h4>
+        <p>QR codes can hide malicious URLs and bypass traditional email filters. Mobile users are particularly vulnerable as URLs are harder to inspect on small screens.</p>
       </div>
     </div>
   </div>
