--- a/Frontend/safelink.html
+++ b/Frontend/safelink.html
@@ -108,29 +108,29 @@
  
     <!-- Security Education -->
     <div class="help-card">
-      <div class="help-title">Security Education</div>
+      <div class="help-title">How URLs Are Analyzed</div>
       <div class="help-item warning">
-        <h4>Understanding Phishing Attacks:</h4>
-        <p>Phishing is a cyberattack where attackers impersonate legitimate organizations to steal sensitive information. These attacks often use fake websites that look identical to real ones, tricking users into entering passwords, credit card numbers, and other sensitive data.</p>
+        <h4>URL Length Analysis:</h4>
+        <p>SafeLink examines the total character count of URLs. Malicious URLs are often excessively long (over 75 characters) to hide their true destination or contain encoded parameters. Legitimate websites typically use shorter, cleaner URLs for better user experience and SEO.</p>
       </div>
       <div class="help-item warning">
-        <h4>How URL Manipulation Works:</h4>
-        <p>Cybercriminals use various techniques to disguise malicious links, including domain spoofing (e.g., goog1e.com), suspicious subdomains (e.g. pay-paypal.com), and URL shortening to hide destinations. Always be cautious of redirected links.</p>
+        <h4>Domain Structure Inspection:</h4>
+        <p>The system analyzes domain length, number of dots, hyphens, and subdomains. Suspicious patterns include multiple subdomains (e.g., secure.login.verify.example.com), excessive hyphens to mimic legitimate brands, or domains using IP addresses instead of names.</p>
       </div>
       <div class="help-item warning">
-        <h4>The Anatomy of a Suspicious URL:</h4>
-        <p>Red flags include unusual character placement, excessive subdomains, urgent language or surrounding text, and brand names followed by suspicious extensions. If something looks or feels wrong, trust your instincts and investigate.</p>
+        <h4>Special Character Detection:</h4>
+        <p>SafeLink counts special characters like @, %, ?, =, and & symbols. High counts of these characters often indicate obfuscation attempts, encoded redirects, or injection attacks. The @ symbol in URLs is particularly suspicious as it can redirect to unexpected domains.</p>
       </div>
       <div class="help-item warning">
-        <h4>Safe Browsing Habits:</h4>
-        <p>Develop good security habits by typing known URLs directly into the browser address bar instead of clicking links, bookmarking important sites, keeping browsers and security software updated, and always using secure connections.</p>
+        <h4>Path and Parameter Analysis:</h4>
+        <p>The tool examines URL paths for excessive slashes, question marks, and parameters. Complex query strings with many equals signs and ampersands may indicate session hijacking attempts, tracking parameters, or encoded malicious payloads hidden in the URL structure.</p>
       </div>
       <div class="help-item warning">
-        <h4>QR Code and Mobile Threats:</h4>
-        <p>QR codes can hide malicious URLs and bypass traditional email filters. Mobile users are particularly vulnerable as URLs are harder to inspect on small screens.</p>
+        <h4>Protocol and TLD Verification:</h4>
+        <p>SafeLink checks for insecure HTTP protocol instead of HTTPS, and analyzes top-level domains (TLDs). Suspicious TLDs like .tk, .ml, .ga, or .pw are frequently used for phishing. The system also detects URL shorteners and flags IP-based addresses that bypass domain registration.</p>
       </div>
     </div>
-  </div>
+    </div>
  
   <main class="container" id="features">
     <h2 class="section-title">FEATURES</h2>
